Fix/mvp issues (#466)
* Prevent status indicator from being hidden by overflow

* Fix widget styles

* Fix dashboard styles

--- a/assets/styles/pages/_widget.scss
+++ b/assets/styles/pages/_widget.scss
@@ -1,19 +1,21 @@
 .widgets {
-  width: 100%;
-  height: 100%;
   background-color: var(--c-gray-20);
-}
+  height: 100%;
+  width: 100%;
+  white-space: nowrap;
 
-.widgets--canvas {
-  position: relative;
-  display: block;
-  overflow-x: hidden;
-  overflow-y: auto;
-  background-color: var(--c-white);
-  border: 1px solid var(--c-gray);
-}
+  &__canvas {
+    background-color: var(--c-white);
+    border: 1px solid var(--c-gray);
+    display: block;
+    margin: 0 auto 1.6rem auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+  }
 
-.widgets--grid {
-  background-image: radial-gradient(circle at 1px 1px, var(--c-gray) 1px, transparent 0);
-  background-size: var(--grid-size) var(--grid-size);
+  &__grid {
+    background-image: radial-gradient(circle at 1px 6px, var(--c-gray) 1px, transparent 0);
+    background-size: var(--grid-size) var(--grid-size);
+  }
 }
